--- a/pom.xml
+++ b/pom.xml
@@ -11,20 +11,39 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.7.9-R0.2-SNAPSHOT</version>
+            <version>[1.8,)</version>
         </dependency>
         <dependency>
             <groupId>com.sk89q</groupId>
             <artifactId>worldedit</artifactId>
             <version>6.0.0-SNAPSHOT</version>
         </dependency>
+        <!-- Local lib dependency -->
+        
+        <dependency>
+            <groupId>localLib</groupId>
+            <artifactId>AsyncWorldEdit</artifactId>
+            <version>2.1.5</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/AsyncWorldEdit/2.1.5/AsyncWorldEdit.jar</systemPath>            
+        </dependency>
+        
+        <dependency>
+            <groupId>localLib</groupId>
+            <artifactId>HolographicDisplays</artifactId>
+            <version>2.1.4</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/HolographicDisplays/2.1.4/HolographicDisplays.jar</systemPath>            
+        </dependency>
     </dependencies>
     <repositories>
+        <repository>
+            <id>spigot-repo</id>
+            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
+        </repository>
         <repository>
             <id>maven.sk89q.com</id>
             <url>http://maven.sk89q.com/repo/</url>
         </repository>
     </repositories>
-
-
 </project>
